clean up nav styles; fix collapse icon

--- a/MountainBound/wwwroot/CSS/NavStyles.css
+++ b/MountainBound/wwwroot/CSS/NavStyles.css
@@ -4,27 +4,19 @@ body {
     width: 100%;
     margin: 0 auto;
     min-height: 100%;
-
 }
 
 .master-nav {
  
-/*    padding: 0;*/
+
     width: 100%;
     background-color: #2b2a1d !important;
     min-height: 4rem;
     text-align: center;
     vertical-align: center;
-/*    color: #fff6d5;*/
-/*    display: inline-block;*/
-/*    font-size: 1em;*/
-   
-
     overflow: hidden;
-/*    justify-items: center;*/
-
     }
-/*ul{padding:0}*/
+
 
 div.master-nav>a {
     width: 19%;
@@ -32,39 +24,31 @@ div.master-nav>a {
     display: inline-block;
     font-size: 1.2rem;
     text-transform: uppercase;
-
     text-align: center;
-/*    vertical-align: middle;*/
     color: #fff6d5;
-
-/*    margin: auto 0 0 auto;*/
 }
 
-/*.master-nav .icom { display: none;}*/
+
 
     div.master-nav > a:hover:not(.icon) {
         color: #ce6000;
         text-decoration-line: none;
     }
 
-
-        div.master-nav > a.alive {
+    div.master-nav > a.alive {
             color: #ce6000;
-        }
-        div.master-nav> a > p {
+    }
+    div.master-nav> a > p {
             font-size: .8em;
             text-transform: none;
             font-style: oblique;
-/*            color: #d6ccad;*/
             margin-bottom: 0;
-/*            letter-spacing: 0;*/
-        }
+       }
 .master-footer {
     height: 6em;
     width: 100%;
     background-color: #2b2a1d;
     color: #d6ccad;
-
     position: fixed;
     bottom: 0;
     font-size: .8em;
@@ -75,7 +59,6 @@ div.master-nav>a {
 
 }
 .italic { font-style: italic; font-size: .8em; margin-left: 1%; margin-top: .5%}
-/*ul>li>a>i, li, li>a{ display: inline; text-align: center;}*/
 span.fa, span>a.fa{margin-left:1%}
 .mb-logo {
     overflow: visible;
@@ -113,8 +96,8 @@ ul.contact-links, .sig-line{ margin: 0;}
 @media screen and (max-width: 600px) {
     .master-nav a:not(:last-child) {display: none;}
     .master-nav a.icon {
-        float: left;
-        display: block;
+        
+     display: block;
     }
         .mb-logo { width: 40%; position: absolute;
             top: 0;
@@ -122,22 +105,24 @@ ul.contact-links, .sig-line{ margin: 0;}
             left: 30%;}
     }
 @media screen and (max-width: 600px) {
-    .master-nav.responsive {position: relative;}
+    .master-nav.responsive {position:static;}
     .master-nav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
+        position: relative;
+        text-align: center !important;
+        font-size: 1.8rem !important;
     }
     .master-nav.responsive a {
         float: none;
         display: block;
         text-align: left;
-        font-size: .8rem;
+        font-size: 1rem;
         overflow: visible;
         margin-bottom: 1.5%;
-        padding-left: 1%
+        padding-left: 1%;
+
+                      
     }
     .master-nav.responsive a p { display: none;}
 }
 
-.master-nav .icon{ display: none; font-size: 2rem;}
+.master-nav .icon{ display: none; font-size: 1.8rem;}
